2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql
	godmode/setup/performance.php: Max recommended number of files in
	attachment directory parametrized.
	
	Bug id: #3540431

2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_networkmap.php: Fixed entity problem in 
	networkmap and hided agents without alerts if "only module with 
	alerts" option enabled.
	
	Bug id: #3597478

2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb_data.sql
	 pandoradb.data.postgreSQL.sql
	 pandoradb.data.oracle.sql: Added field1 to Pandora event action.

	Bug id: #3599449

2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/incidents/incident.php
	 operation/agentes/alerts_status.php
	 operation/agentes/estado_ultimopaquete.php: Restored messages 
	 when views are empty.
	 
2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/agents_modules.php
	extensions/users_connected.php
	extensions/module_groups.php
	operation/tree.php
	operation/agentes/status_monitor.php
	operation/agentes/datos_agente.php
	operation/agentes/custom_fields.php
	operation/agentes/estado_agente.php
	operation/agentes/sla_view.php
	operation/agentes/group_view.php
	operation/servers/recon_view.php
	operation/snmpconsole/snmp_view.php
	operation/gis_maps/index.php
	operation/events/events_list.php
	operation/messages/message_list.php
	operation/reporting/graph_viewer.php
	godmode/groups/group_list.php
	godmode/agentes/fields_manager.php
	godmode/agentes/module_manager.php
	godmode/agentes/modificar_agente.php
	godmode/agentes/planned_downtime.php
	godmode/alerts/alert_list.list.php
	godmode/snmpconsole/snmp_alert.php
	godmode/snmpconsole/snmp_filters.php
	godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.php
	godmode/reporting/graphs.php